begin homepage styling.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio Site</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <h1>Ben's Portfolio Site</h1>
+<p>Welcome to my website.</p>
+<h2>Past Experience</h2>
+<ul>
+    <li>Northcoders Student. 2020 - 2021</li>
+    <li>IT Trainer specialising in Microsoft Office and VBA. 2015 - 2020</li>
+</ul>
 </body>
 </html>
