--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<h1>Ben's Portfolio Site</h1>
+<h1 class="title">Ben's Portfolio Site</h1>
+<a href="index.html">Home</a>
+<a href="about.html">About</a>
 <p>Welcome to my website.</p>
 <h2>Past Experience</h2>
 <ul>
