changing header tags for better mobile experience

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <br>
 <br>
 <br>
-<h4 style="text-align:center"><p>Hello and welcome to my portfolio page.</p>
-  <p>I am Benjamin Karst, a full stack junior developer with experience in VBA freelance work.</p></h4>
+<b style="text-align:center"><p>Hello and welcome to my portfolio page.</p>
+  <p>I am Benjamin Karst, a full stack junior developer with experience in VBA freelance work.</p></b>
 <br>
 <div style="text-align:center">
     <p>
