added links to Github and Heroku

--- a/JavaScriptProjects.html
+++ b/JavaScriptProjects.html
@@ -55,8 +55,12 @@
 <br>
 <h3 style="text-align:center">API Server for Northcoders</h3>
 <br>
+<h4 style="text-align:center">API Server: </h4><div style="text-align:center">https://my-news-api.herokuapp.com/api </div>
+<h4 style="text-align:center">GitHub: </h4><div style="text-align:center">https://github.com/karben86/nc_news</div>
+<br>
+<br>
 <h3 style="text-align:center">Description</h3>
-<p style="text-align:center">The aim of this project was to design an API for the purpose of accessing news data programmatically similarly to a service such as reddit. This information should then be available to the front end architecture via standard http methods.</p>
+<p style="text-align:center">The aim of this project was to design an API server for the purpose of accessing news data programmatically similarly to a service such as reddit. This information should then be available to the front end architecture via standard http methods.</p>
 <br>
 <br>
 <br>
