added links to Github and Heroku

--- a/JavaScriptProjects.html
+++ b/JavaScriptProjects.html
@@ -54,9 +54,8 @@
 <br>
 <br>
 <h3 style="text-align:center">API Server for Northcoders</h3>
-<br>
-<h4 style="text-align:center">API Server: </h4><div style="text-align:center">https://my-news-api.herokuapp.com/api </div>
-<h4 style="text-align:center">GitHub: </h4><div style="text-align:center">https://github.com/karben86/nc_news</div>
+<h4 style="text-align:center">API Server:</h4><A style="text-align:center" href="https://my-news-api.herokuapp.com/api">https://my-news-api.herokuapp.com/api</A>
+<h4 style="text-align:center">GitHub:</h4><A style="text-align:center" href="https://github.com/karben86/nc_news">https://github.com/karben86/nc_news</A>
 <br>
 <br>
 <h3 style="text-align:center">Description</h3>
