changing responsiveness on VBA project links

--- a/JavaScriptProjects.html
+++ b/JavaScriptProjects.html
@@ -60,7 +60,7 @@
 <br>
 <br>
 <h3 style="text-align:center">Description</h3>
-<p style="text-align:center">The aim of this project was to design an API server for the purpose of accessing news data programmatically similarly to a service such as reddit. This information should then be available to the front end architecture via standard http methods.</p>
+<p style="text-align:center" class="intro">The aim of this project was to design an API server for the purpose of accessing news data programmatically similarly to a service such as reddit. This information should then be available to the front end architecture via standard http methods.</p>
 <br>
 <br>
 <br>
