fixing some spelling mistakes

--- a/VBAProjects.html
+++ b/VBAProjects.html
@@ -73,7 +73,7 @@
     </div>
     <div class="column">
         <h3 style="width:100%;">Description</h3>
-        <p style="width:100%;">As Tiempo Espana Dance Academy was a small company without a dedicated HR department, the aim was to create an application that dance teachers could use to effectively manage themselves automating as much as possible around adminstration, bookings, accounting etc. and only highlighting key issues to mangagement.</p>
+        <p style="width:100%;">As Tiempo Espana Dance Academy was a small company without a dedicated HR department, the aim was to create an application that dance teachers could use to effectively manage themselves automating as much as possible around administration, bookings, accounting etc. and only highlighting key issues to management.</p>
     </div>
 </div>
 
